<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/detailLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.restaurantapp.DetailActivity">

    <ImageView
        android:layout_width="170dp"
        android:layout_height="170dp"
        android:scaleType="fitXY"
        android:id="@+id/restaurantImage"
        android:layout_alignTop="@+id/restaurantAddress"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="Restaurant Name"
        android:textColor="@android:color/holo_red_light"
        android:id="@+id/restaurantName"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="Address"
        android:textColor="@android:color/holo_green_dark"
        android:id="@+id/restaurantAddress"
        android:layout_below="@+id/categoryTextView"
        android:layout_toRightOf="@+id/restaurantImage"
        android:layout_marginTop="28dp"
        android:layout_marginLeft="12dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@android:color/holo_red_dark"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/recommened_reviews"
        android:id="@+id/recommenedReviews"
        android:layout_marginBottom="26dp"
        android:layout_above="@+id/userImage"
        android:layout_alignParentStart="true" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/userImage"
        android:padding="8dp"
        android:layout_above="@+id/userName"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="Reviewer Name"
        android:id="@+id/userName"
        android:textColor="@color/material_blue_grey_800"
        android:layout_marginBottom="53dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="14"
        android:id="@+id/reviewText"
        android:layout_marginLeft="20dp"
        android:layout_below="@+id/recommenedReviews"
        android:layout_toEndOf="@+id/userName" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@android:color/holo_red_dark"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/overall_rating"
        android:id="@+id/overallRatingTextView"
        android:layout_marginTop="27dp"
        android:layout_below="@+id/restaurantImage"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@android:color/holo_red_dark"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:id="@+id/ratingTextView"
        android:layout_alignTop="@+id/overallRatingTextView"
        android:layout_alignStart="@+id/restaurantAddress"
        android:layout_marginStart="29dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/categories"
        android:id="@+id/categoryTextView"
        android:layout_marginLeft="3dp"
        android:layout_marginRight="3dp"
        android:layout_below="@+id/restaurantName" />
</RelativeLayout>
