<?xml version="1.0" encoding="utf-8"?>
<de.codecrafters.tableview.SortableTableView xmlns:table="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/tableView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    table:tableView_columnCount="2" />



