<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent" android:id="@+id/searchLayout"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:id="@+id/errorTxt"
        android:layout_column="0"
        android:layout_columnSpan="6"
        android:layout_row="6"
        android:textColor="@color/red"
        android:visibility="invisible"
        android:layout_gravity="center_horizontal" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:id="@+id/searchTxt"
        android:layout_column="0"
        android:layout_columnSpan="6"
        android:layout_row="6"
        android:hint="@string/searchLocation"
        android:layout_gravity="center_horizontal" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:id="@+id/limitTxt"
        android:layout_column="0"
        android:layout_columnSpan="6"
        android:layout_row="6"
        android:hint="@string/limit"
        android:layout_gravity="center_horizontal" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Search"
        android:id="@+id/searchBtn"
        android:layout_gravity="center_horizontal" />
</LinearLayout>